--- a/css/animation.css
+++ b/css/animation.css
@@ -81,7 +81,7 @@
 
 .main-btn__circle._active,
 .circle._active {
-  animation: circle .8s 2s alternate linear 1 backwards;
+  animation: circle .8s 2.2s alternate linear 1 backwards;
 }
 
 .card__order-text._active {
@@ -103,42 +103,56 @@
 
 
 @keyframes circle-hov {
-  0% {
-    clip: rect(0 0 0 0);
-  }
+  0% {clip-path: polygon(50% 0%, 100% 0, 100% 35%, 100% 70%, 100% 100%, 50% 100%, 0 100%, 0% 70%, 0% 35%, 0 0);}
 
-  50% {
-    clip: rect(25px 25px 0 0);
-  }
+  10% {clip-path: polygon(50% 0%, 100% 0, 100% 35%, 100% 70%, 100% 100%, 50% 100%, 0 100%, 0% 70%, 0% 35%, 24% 17%);}
 
+  20% {clip-path: polygon(50% 0, 100% 0, 100% 29%, 100% 57%, 100% 100%, 48% 100%, 0 100%, 0 75%, 0 45%, 24% 17%);}
 
-  100% {
-    clip: rect(25px 0 0 0);
-  }
+  30% {clip-path: polygon(50% 0%, 100% 0, 100% 35%, 100% 70%, 100% 100%, 50% 100%, 0 100%, 0 67%, 9% 44%, 24% 17%);}
+
+  40% {clip-path: polygon(50% 0%, 100% 0, 100% 35%, 100% 70%, 100% 100%, 50% 100%, 0 100%, 9% 74%, 8% 45%, 24% 17%);}
+
+  50% {clip-path: polygon(50% 0%, 100% 0, 100% 35%, 100% 70%, 100% 100%, 50% 100%, 28% 88%, 9% 74%, 8% 45%, 24% 17%);}
+
+  60% {clip-path: polygon(50% 0%, 100% 0, 100% 35%, 100% 70%, 100% 89%, 50% 91%, 28% 88%, 9% 74%, 8% 45%, 24% 17%);}
+
+  70% {clip-path: polygon(50% 0%, 100% 0, 100% 35%, 100% 57%, 81% 83%, 50% 91%, 28% 88%, 9% 74%, 8% 45%, 24% 17%);}
+
+  80% {clip-path: polygon(50% 0%, 100% 0, 100% 35%, 88% 57%, 81% 83%, 50% 91%, 28% 88%, 9% 74%, 8% 45%, 24% 17%);}
+
+  90% {clip-path: polygon(50% 0%, 67% 0, 89% 30%, 88% 57%, 81% 83%, 50% 91%, 28% 88%, 9% 74%, 8% 45%, 24% 17%);}
+
+  100% {clip-path: polygon(43% 10%, 64% 11%, 89% 30%, 88% 57%, 81% 83%, 50% 91%, 28% 88%, 9% 74%, 8% 45%, 24% 17%);}
 }
 
-.card__order:hover {
-  animation: circle-hov .8s alternate linear infinite;
+.card__order:active::after {
+  transform: rotate(95deg);
+  animation: circle-hov .3s alternate linear 1 both;
 }
 
 @keyframes circle {
-  0% { clip-path: polygon(32% 15%, 70% 15%, 85% 32%, 86% 69%, 69% 87%, 29% 88%, 10% 68%, 10% 31%);  }
+  100% {clip-path: polygon(50% 0%, 100% 0, 100% 35%, 100% 70%, 100% 100%, 50% 100%, 0 100%, 0% 70%, 0% 35%, 0 0);}
 
-  11% { clip-path: polygon(32% 15%, 40% 0, 100% 0, 86% 69%, 69% 87%, 29% 88%, 10% 68%, 10% 31%); }
+  90% {clip-path: polygon(50% 0%, 100% 0, 100% 35%, 100% 70%, 100% 100%, 50% 100%, 0 100%, 0% 70%, 0% 35%, 24% 17%);}
 
-  22% { clip-path: polygon(32% 15%, 40% 0, 100% 0, 100% 60%, 69% 87%, 29% 88%, 10% 68%, 10% 31%); }
+  80% {clip-path: polygon(50% 0, 100% 0, 100% 29%, 100% 57%, 100% 100%, 48% 100%, 0 100%, 0 75%, 0 45%, 24% 17%);}
 
-  33% { clip-path: polygon(32% 15%, 40% 0, 100% 0, 100% 60%, 100% 100%, 29% 88%, 10% 68%, 10% 31%); }
+  70% {clip-path: polygon(50% 0%, 100% 0, 100% 35%, 100% 70%, 100% 100%, 50% 100%, 0 100%, 0 67%, 9% 44%, 24% 17%);}
 
-  44% { clip-path: polygon(32% 15%, 40% 0, 100% 0, 100% 60%, 100% 100%, 50% 100%, 10% 68%, 10% 31%); }
+  60% {clip-path: polygon(50% 0%, 100% 0, 100% 35%, 100% 70%, 100% 100%, 50% 100%, 0 100%, 9% 74%, 8% 45%, 24% 17%);}
 
-  50% { clip-path: polygon(32% 15%, 40% 0, 100% 0, 100% 60%, 100% 100%, 50% 100%, 0 100%, 10% 31%); }
+  50% {clip-path: polygon(50% 0%, 100% 0, 100% 35%, 100% 70%, 100% 100%, 50% 100%, 28% 88%, 9% 74%, 8% 45%, 24% 17%);}
 
-  75% { clip-path: polygon(25% 20%, 40% 0, 100% 0, 100% 60%, 100% 100%, 0 99%, 0 63%, 15% 40%); }
+  40% {clip-path: polygon(50% 0%, 100% 0, 100% 35%, 100% 70%, 100% 89%, 50% 91%, 28% 88%, 9% 74%, 8% 45%, 24% 17%);}
 
-  85% { clip-path: polygon(25% 20%, 40% 0, 100% 0, 100% 60%, 100% 100%, 0 99%, 0 63%, 0 23%); }
+  30% {clip-path: polygon(50% 0%, 100% 0, 100% 35%, 100% 57%, 81% 83%, 50% 91%, 28% 88%, 9% 74%, 8% 45%, 24% 17%);}
 
-  100% { clip-path: polygon(0 0, 40% 0, 100% 0, 100% 60%, 100% 100%, 0 99%, 0 63%, 0 26%); }
+  20% {clip-path: polygon(50% 0%, 100% 0, 100% 35%, 88% 57%, 81% 83%, 50% 91%, 28% 88%, 9% 74%, 8% 45%, 24% 17%);}
+
+  10% {clip-path: polygon(50% 0%, 67% 0, 89% 30%, 88% 57%, 81% 83%, 50% 91%, 28% 88%, 9% 74%, 8% 45%, 24% 17%);}
+
+  0% {clip-path: polygon(43% 10%, 64% 11%, 89% 30%, 88% 57%, 81% 83%, 50% 91%, 28% 88%, 9% 74%, 8% 45%, 24% 17%);}
 }
 
 @keyframes line {
