--- a/css/style.css
+++ b/css/style.css
@@ -85,8 +85,10 @@ body {
   bottom: 0%;
   left: 0%;
   height: 100%;
-  width: 100vw;
+  width: 100%;
   overflow: hidden;
+  background: url('../img/main-bg.jpg') center center no-repeat, #C7C7C7;
+  background-size: cover;
 }
 
 .video-container .poster img {
@@ -102,9 +104,18 @@ body {
 }
 
 .video-container video {
-  position: relative;
   z-index: 0;
   bottom: 0;
+}
+
+.fillWidth {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  object-fit: cover;
+  transform: translate(-50%, -50%);
 }
 
 /* .video-container video.fillWidth {
@@ -2334,11 +2345,17 @@ a.ui-button:active,
 
 @media (max-width: 420px) {
   .menu__main-btn {
-    margin-right: 0;
+    margin-right: 10px;
   }
 
   .main-btn__arrow {
     width: 100%;
+  }
+}
+
+@media (max-width: 330px) {
+  .preloader__item::after {
+    height: 100px;
   }
 }
 
