--- a/css/style.css
+++ b/css/style.css
@@ -284,6 +284,8 @@ body {
 }
 
 .help__link {
+  border: none;
+  background-color: inherit;
   color: #FEFEFE;
   z-index: 2;
 }
@@ -369,8 +371,8 @@ body {
   position: absolute;
   width: 50px;
   height: 50px;
-  right: -24px;
-  top: -24px;
+  right: -25px;
+  top: -25px;
 }
 
 .main-btn__circle::before {
@@ -532,8 +534,25 @@ body {
   letter-spacing: 0.04em;
 }
 
-.component {
+.block__view {
   position: relative;
+  margin-top: 150px;
+  padding-bottom: 30px;
+}
+
+.component-box {
+  width: 150px;
+  height: 150px;
+}
+
+.block__view-component {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+}
+
+.component {
   width: 150px;
   height: 150px;
   border-radius: 50%;
@@ -584,9 +603,7 @@ body {
   height: 240px;
 }
 
-.block__view {
-  margin-top: 150px;
-}
+
 
 .block__row {
   display: flex;
@@ -616,11 +633,14 @@ body {
 }
 
 .pages {
+  position: relative;
+  width: 180px;
   font-size: 14px;
   line-height: 18px;
   color: #727272;
 }
 
+.pages__reviews-line,
 .pages__line {
   display: inline-block;
   width: 104px;
@@ -832,7 +852,7 @@ body {
 }
 
 .safety-block__row {
-  margin-top: 200px;
+  margin-top: 20px;
 }
 
 .main-btn-safety {
@@ -841,10 +861,9 @@ body {
   margin-top: 20px;
 }
 
-.safety-block__img {
+.safety-block__img1 {
   width: 100%;
   height: 400px;
-  margin-bottom: 20px;
   background: url('../img/Rectangle368.jpg') center center no-repeat;
   background-size: cover;
 }
@@ -891,10 +910,28 @@ body {
   transition: transform .3s ease-in-out;
 }
 
-.safety-block__img-500 {
-  max-width: 500px;
+.safety-block__img-500-box {
+  width: 500px;
   height: 600px;
-  background: url('../img/unnamed4.jpg') center center no-repeat, #F2F2F2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #F2F2F2
+}
+
+.safety-block__img-box {
+  width: 600px;
+  height: 400px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #F2F2F2
+}
+
+.safety-block__img-500 {
+  width: 160px;
+  height: 360px;
+  background: url('../img/unnamed4.jpg') center center no-repeat ;
 }
 
 .safety__section-title_left {
@@ -912,7 +949,10 @@ body {
 }
 
 .safety-block__img-bg {
-  background: url('../img/unnamed2.jpg') center center no-repeat, #F2F2F2;
+  width: 159px;
+  height: 340px;
+  background: url('../img/unnamed2.jpg') center center no-repeat;
+  background-size: cover;
 }
 
 .reviews__section {
@@ -920,6 +960,8 @@ body {
 }
 
 .reviews__img {
+  width: 500px;
+  height: 600px;
   background: url('../img/Rectangle375.jpg') center center no-repeat;
   background-size: cover;
 }
@@ -935,7 +977,27 @@ body {
   justify-content: space-between;
 }
 
+.reviews-component {
+  position: relative;
+}
+
+.reviews-swiper {
+  position: relative;
+}
+
+.rewiews__slide-nav {
+  display: flex;
+  justify-content: space-between;
+  width: 50%;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 5;
+}
+
 .reviews-pages {
+  display: flex;
+  align-items: center;
   margin-top: auto;
 }
 
@@ -975,7 +1037,6 @@ body {
   bottom: 0;
   left: 0;
   width: 100%;
-  opacity: 0;
   border-bottom: 1px solid #010101;
 }
 
@@ -1248,6 +1309,7 @@ a.ui-button:active,
 }
 
 .cookies {
+  z-index: 10;
   visibility: hidden;
   opacity: 0;
   bottom: 0;
@@ -1324,7 +1386,7 @@ a.ui-button:active,
   background: #FAFAFA;
 }
 
-.swiper-container {
+.popup__swiper {
   position: relative;
   margin-top: 52px;
   margin-left: 30px;
@@ -1437,6 +1499,232 @@ a.ui-button:active,
   opacity: 1;
 }
 
+.popup-help__close,
+.popup__close {
+  text-align: right;
+  font-size: 20px;
+  color: #C7C7C7;
+  transition: color .3s ease-in-out;
+}
+
+.popup-help__close:hover,
+.popup__close:hover {
+  color: #727272;
+}
+
+.popup-help__close:active,
+.popup__close:active {
+  color: #010101;
+}
+
+.popup__help {
+  display: none;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 25;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.popup-help__content {
+  position: absolute;
+  width: 600px;
+  height: 340px;
+  top: 50%;
+  left: 50%;
+  background: #FAFAFA;
+  transform: translate(-50%, -50%);
+  animation: opacity .3s alternate linear 1 both;
+}
+
+.popup-help__close {
+  width: 20px;
+  margin-left: auto;
+  margin-top: 20px;
+  margin-right: 20px;
+}
+
+.popup-help-step__content {
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+
+.popup-help__step1 {
+  display: none;
+  margin-top: 50px;
+}
+
+.step__content-title {
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 23px;
+  color: #010101;
+}
+
+.step__content-row {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.step__content-btn {
+  width: 200px;
+  height: 40px;
+  background: #E6E6E6;
+  border: none;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 18px;
+  color: #010101;
+  transition: all .3s ease-in-out;
+}
+
+.step__content-btn:hover {
+  background: #E6E6E6;
+}
+
+.step__content-btn_active {
+  background: #0222A5;
+  color: #FEFEFE;
+}
+
+.popup-help__line {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 3px;
+  background: #C7C7C7;
+}
+
+.help-line {
+  height: 100%;
+  background: #010101;
+}
+
+.help-line__step1 {
+  width: 33%;
+}
+
+
+
+.popup-help__step2 {
+  margin-top: 50px;
+  display: none;
+}
+
+.popup-help__step3 {
+  margin-top: 1px;
+  display: none;
+}
+
+.popup-help__step4 {
+  margin-top: 60px;
+  display: none;
+}
+
+.help-line__step2 {
+  width: 66%;
+}
+
+.help-line__step3 {
+  width: 95%;
+}
+
+.budget-item {
+  width: 142px;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-bottom: 4px;
+  border-bottom: 1px solid #C7C7C7;
+  line-height: 300;
+  font-size: 14px;
+  line-height: 18px;
+  color: #010101;
+  transition: all .3s ease-in-out;
+}
+
+.budget-item:hover {
+  border-bottom: 1px solid #0222A5;
+}
+
+.budget-item:active {
+  border-bottom: 1px solid #010101;
+}
+
+.step3__content-title {
+  margin: 0 auto;
+  max-width: 382px;
+  margin-bottom: 10px;
+}
+
+.step__content-phone {
+  max-width: 258px;
+}
+
+.callback__tel-popup {
+  width: 100%;
+  text-align: left;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 18px;
+  letter-spacing: 0.04em;
+}
+
+.popup__personal-data {
+  width: 100%;
+  text-align: left;
+  font-size: 10px;
+  line-height: 13px;
+  letter-spacing: 0.04em;
+}
+
+.callback__btn-popup {
+  width: 120px;
+  height: 120px;
+  margin-left: 30px;
+}
+
+.step4__content-title {
+  font-size: 28px;
+  line-height: 34px;
+}
+
+.popup-help__step_active {
+  display: block;
+}
+
+.step__content-text {
+  font-weight: 300;
+  font-size: 14px;
+  letter-spacing: 0.04em;
+  color: #727272;
+}
+
+.popup__ok {
+  margin: 38px auto 0;
+  width: 60px;
+  height: 45px;
+  background: url('../img/ok.svg') center center no-repeat;
+  background-size: cover;
+}
+
+.help-line__step4 {
+  width: 100%;
+  animation: line 5s alternate linear 1 both;
+}
+
+.safety-block__row_bottom {
+  margin-top: 200px;
+}
+
 /* -----------------------------adptive-index.html----------------------------- */
 @media (max-width: 1599px) {
   .header__title {
@@ -1505,6 +1793,7 @@ a.ui-button:active,
     top: 70vh;
   }
 
+  .component-box,
   .component {
     width: 130px;
     height: 130px;
@@ -1579,6 +1868,8 @@ a.ui-button:active,
   }
 }
 
+
+
 @media (max-width: 1024px) {
   .container {
     padding: 0 34px;
@@ -1589,6 +1880,7 @@ a.ui-button:active,
     justify-content: center;
   }
 
+  .component-box,
   .component {
     width: 100px;
     height: 100px;
@@ -1602,9 +1894,54 @@ a.ui-button:active,
     right: 35px;
   }
 
-  .section__col-2 {
-    width: 320px;
+  .popup__viewed {
+    width: 50%;
   }
+
+  .popup__swiper {
+    margin-top: 40px;
+    height: 552px;
+  }
+
+  .swiper-slide {
+    width: 290px;
+  }
+
+  .safety-block__img-500 {
+    width: 128px;
+    height: 288px;
+  }
+
+  .safety-block__img {
+    width: 119px;
+    height: 255px;
+  }
+
+  .safety-block__img-500-box {
+    width: 400px;
+    height: 480px;
+  }
+
+  .safety-block__img-box {
+    width: 450px;
+    height: 300px;
+  }
+
+  .safety-block__img1 {
+    width: 450px;
+    height: 350px;
+  }
+
+  .special-offer__box-img {
+    width: 96px;
+    height: 200px;
+  }
+
+  .reviews__img {
+    width: 400px;
+    height: 600px;
+  }
+
 
   .box_big-img {
     width: 200px;
@@ -1616,11 +1953,7 @@ a.ui-button:active,
     margin-top: 40px;
   }
 
-  .col-600__img,
-  .block__col-450,
-  .section__col-450 {
-    width: 350px;
-  }
+
 
   .benefits__text-500_long {
     position: relative;
@@ -1629,7 +1962,7 @@ a.ui-button:active,
 
   .col-300__img,
   .block__col-300 {
-    width: 250px;
+    width: 300px;
   }
 
   .main-btn-benefits__arrow {
@@ -1787,17 +2120,71 @@ a.ui-button:active,
     width: 330px;
   }
 
+  .col-600__img,
+  .block__col-450,
+  .section__col-450 {
+    width: 350px;
+  }
+
+  .reviews__img {
+    width: 320px;
+    height: 450px;
+  }
+
+  .safety-block__img1 {
+    width: 350px;
+    height: 272px;
+  }
+
+  .safety-block__img {
+    width: 119px;
+    height: 255px;
+  }
+
+  .safety-block__img-500-box {
+    width: 320px;
+    height: 480px;
+  }
+
+  .safety-block__img-box {
+    width: 350px;
+    height: 300px;
+  }
+
+  .section__col-2 {
+    width: 320px;
+  }
+
   .benefits__img {
     width: 350px;
   }
 
+  .benefits__img-1 {
+    height: 400px;
+  }
+
   .benefits__img-500 {
+    height: 600px;
     width: 350px;
     margin-top: 40px;
   }
 
+  .benefits__img-700 {
+    height: 452px;
+  }
+
+  .col-600__img {
+    height: 415px;
+  }
+
   .help__menu {
     display: block;
+  }
+
+  .cookies__btn {
+    right: 0;
+    left: auto;
+    transform: translate(0, -50%);
   }
 }
 
@@ -1973,6 +2360,7 @@ a.ui-button:active,
     width: 45%;
   }
 
+  .component-box,
   .component {
     width: 70px;
     height: 70px;
@@ -2137,7 +2525,6 @@ a.ui-button:active,
 
   .safety-block__row {
     flex-direction: column;
-    margin-top: 100px;
   }
 
   .safety-section__col-2 {
@@ -2175,6 +2562,7 @@ a.ui-button:active,
   }
 
   .reviews__img {
+    width: 220px;
     height: 359px;
   }
 
@@ -2210,6 +2598,10 @@ a.ui-button:active,
     max-width: 220px;
   }
 
+  .popup-help__step2 {
+    margin-top: 20px;
+  }
+
   .callback__btn {
     width: 130px;
     height: 130px;
@@ -2218,6 +2610,126 @@ a.ui-button:active,
   .callback__row {
     justify-content: space-between;
     align-items: flex-end;
+  }
+
+  .popup-help__step4 {
+    margin-top: 20px;
+}
+
+  .popup-help__content {
+    width: 440px;
+    height: 280px;
+  }
+
+  .callback__btn {
+    width: 90px;
+    height: 90px;
+}
+
+  .step3__content-title {
+    margin: 0 auto;
+    width: 336px;
+    font-size: 14px;
+    line-height: 18px;
+}
+
+  .step4__content-title {
+    font-size: 24px;
+    line-height: 28px;
+  }
+
+  .step__content-text {
+    margin: 0 auto;
+    line-height: 18px;
+    width: 270px;
+  }
+
+  .consultation {
+    width: 200px;
+  }
+
+  .catlog__main-btn {
+    width: 200px;
+  }
+
+  .catlog__main-btn .main-btn__arrow:after {
+    top: -8px;
+  }
+
+  .block__row-direction {
+    flex-wrap: wrap;
+  }
+}
+
+@media (max-width: 600px) {
+  .benefits__img-1 {
+    width: 200px;
+    height: 300px;
+  }
+
+  .benefits__text {
+    width: 220px;
+  }
+
+  .main-btn-600 {
+    margin-top: 20px;
+  }
+
+  .safety-block__img1 {
+    width: 100%;
+    height: 275px;
+  }
+
+  .safety-block__img {
+    width: 100px;
+    height: 212px;
+  }
+
+  .safety__section-title {
+    font-size: 20px;
+    line-height: 24px;
+  }
+
+  .safety-block__img-500-box {
+    width: 100%;
+    height: 252px;
+    padding: 20px;
+  }
+
+  .safety-block__img-500 {
+    width: 94px;
+    height: 212px;
+}
+
+  .safety-block__img-box {
+    width: 100%;
+    height: 252px;
+    padding: 20px;
+  }
+
+  .reviews-swiper {
+    height: 390px;
+  }
+
+  .rewiews__slide-nav {
+    width: 100%;
+  }
+
+  .benefits__text {
+    width: 100%;
+  }
+
+  .reviews-pages {
+    width: 220px;
+  }
+
+  .pages__reviews-line {
+    width: 123px;
+    margin: 0 36px;
+  }
+
+  .reviews-component {
+    margin-bottom: 30px;
   }
 }
 
@@ -2255,6 +2767,15 @@ a.ui-button:active,
     margin-top: 55vh;
   }
 
+  .circle,
+  .main-btn__circle {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  right: -15px;
+  top: -15px;
+  }
+
   .section__row {
     flex-direction: column;
     align-items: start;
@@ -2270,10 +2791,6 @@ a.ui-button:active,
 
   .block__view {
     margin-top: 50px;
-  }
-
-  .block__row-direction {
-    flex-direction: column;
   }
 
   .special-offer__card_small {
@@ -2438,24 +2955,28 @@ a.ui-button:active,
     margin-top: 50px;
   }
 
-  .safety-block__img {
-    width: 300px;
+  .safety-block__img-500 {
+    width: 94px;
+    height: 212px;
+  }
+
+  .safety-block__img1 {
     height: 200px;
   }
 
-  .safety-block__img-500,
-  .safety-block__img-bg {
+  .safety-block__img-500-box {
     width: 300px;
     height: 252px;
-    background-size: contain;
   }
 
-  .safety-block__img-500 {
-    background: url('../img/unna\ 4.jpg') center center no-repeat, #F2F2F2;
+  .safety-block__img-box {
+    width: 100%;
+    height: 252px;
   }
 
-  .safety-block__img-bg {
-    background: url('../img/unna2.jpg') center center no-repeat, #F2F2F2;
+  .safety-block__img {
+    width: 100px;
+    height: 212px;
   }
 
   .reviews__img {
@@ -2463,7 +2984,6 @@ a.ui-button:active,
     height: 250px;
     background: url('../img/Rectangle375.jpg') center center no-repeat;
     background-size: cover;
-
   }
 
   .reviews__section {
@@ -2471,6 +2991,7 @@ a.ui-button:active,
   }
 
   .block__row-reviews {
+    margin-top: 45px;
     order: 2;
   }
 
@@ -2534,6 +3055,30 @@ a.ui-button:active,
   .section__col-main {
     width: 100%;
   }
+
+  .cookies__content {
+    height: 100px;
+    padding: 20px 10px;
+  }
+
+  .cookies__content-text {
+    max-width: 143px;
+    font-size: 8px;
+    line-height: 10px;
+  }
+
+  .cookies__btn {
+     width: 70px;
+     height: 70px;
+     font-size: 12px;
+     line-height: 16px;
+  }
+
+  .cookies__content-title {
+    max-width: 192px;
+    font-size: 10px;
+    line-height: 13px;
+  }
 }
 
 @media (max-width: 420px) {
@@ -2543,6 +3088,43 @@ a.ui-button:active,
 
   .main-btn__arrow {
     width: 100%;
+  }
+
+  .popup-help__content {
+    width: 300px;
+    height: 350px;
+  }
+
+  .step__content-btn {
+    width: 140px;
+  }
+
+  .popup-help__step3 {
+    margin-top: 20px;
+  }
+
+  .step3__content-title {
+    width: 260px;
+    font-size: 12px;
+    line-height: 16px;
+  }
+
+  .step3__content-row {
+    margin-top: 0;
+    flex-direction: column;
+  }
+
+  .callback__tel-popup {
+    width: 258px;
+  }
+
+  .popup__personal-data {
+    width: 258px;
+    margin-bottom: 30px;
+  }
+
+  .callback__btn-popup {
+    margin: 0 auto;
   }
 }
 
@@ -3348,6 +3930,10 @@ a.ui-button:active,
   .pages {
     margin-bottom: 50px;
     margin-top: 20px;
+  }
+
+  .reviews-pages {
+    margin-bottom: 100px;
   }
 
   .section__col-2 {
@@ -4226,6 +4812,12 @@ a.ui-button:active,
     line-height: 36px;
   }
 
+  .popup-view__box {
+    width: 290px;
+    height: 450px;
+    margin: 0;
+  }
+
   .card__econom {
     width: 193px;
     font-weight: 400;
@@ -4399,6 +4991,27 @@ a.ui-button:active,
   .sentens__nav {
     margin-top: -150px;
   }
+}
+
+@media (max-width: 800px) {
+  .popup__viewed {
+    width: 414px;
+  }
+
+  .popup-view__box {
+    width: 270px;
+    height: 423px;
+    margin: 0;
+  }
+
+  .popup-view__img {
+    width: 130px;
+    height: 272px;
+  }
+
+  .swiper-slide {
+    width: 270px;
+}
 }
 
 @media (max-width: 700px) {
@@ -4581,12 +5194,20 @@ a.ui-button:active,
     width: 250px;
     margin-bottom: 20px;
   }
+
+  .popup__viewed {
+    height: 750px;
+  }
 }
 
 @media (max-width: 479px) {
   .header__nav {
     flex-wrap: wrap;
     flex-direction: row;
+  }
+
+  .popup__viewed {
+    width: 320px;
   }
 
   .card__plus-tatle {
@@ -4632,4 +5253,6 @@ a.ui-button:active,
   .sentens__nav-item {
     align-items: center;
   }
+
+
 }
