--- a/css/style.css
+++ b/css/style.css
@@ -1505,6 +1505,7 @@ a.ui-button:active,
   font-size: 20px;
   color: #C7C7C7;
   transition: color .3s ease-in-out;
+  cursor: pointer;
 }
 
 .popup-help__close:hover,
@@ -1586,7 +1587,13 @@ a.ui-button:active,
 }
 
 .step__content-btn:hover {
-  background: #E6E6E6;
+  background: #C7C7C7;
+  color: #010101;
+}
+
+.step__content-btn:active {
+  background: #0222A5;
+  color: #FEFEFE;
 }
 
 .step__content-btn_active {
@@ -2965,7 +2972,7 @@ a.ui-button:active,
   }
 
   .safety-block__img-500-box {
-    width: 300px;
+    width: 100%;
     height: 252px;
   }
 
@@ -3937,7 +3944,7 @@ a.ui-button:active,
   }
 
   .section__col-2 {
-    width: 150px;
+    /* width: 150px; */
     margin-right: 10px;
   }
 
