--- a/css/style.css
+++ b/css/style.css
@@ -3191,6 +3191,15 @@ a.ui-button:active,
   font-size: 14px;
   line-height: 18px;
   color: #9A9A9A;
+  transition: color .3s ease-in-out;
+}
+
+.nav__link:hover {
+  color: #0222A5;
+}
+
+.nav__link:active {
+  color: #0222A5;
 }
 
 .nav__link_active {
@@ -3233,13 +3242,50 @@ a.ui-button:active,
   align-items: center;
 }
 
+.filter__radio_small,
 .filter__radio {
+  z-index: 1;
+  opacity: 0;
+  position: absolute;
+  height: 20px;
+  width: 100%;
+  cursor: pointer;
+}
+
+.input-radio {
+  position: relative;
   margin-right: 10px;
   height: 20px;
   width: 20px;
+  border-radius: 50%;
+  border: 1px solid #727272;
+  transition: border .3s ease-in-out;
+}
+
+.input-radio::after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background: #000000;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: opacity .3s ease-in-out;
+}
+
+.filter__radio:checked + .input-radio::after {
+  opacity: 1;
+}
+
+.filter__radio:checked + .input-radio {
+  border: 1px solid #000000;
 }
 
 .filter__label {
+  position: relative;
   width: 200px;
   height: 40px;
   padding: 10px 0;
@@ -3251,10 +3297,25 @@ a.ui-button:active,
   line-height: 16px;
   letter-spacing: 0.04em;
   color: #222222;
+  transition: border-color .3s ease-in-out;
+}
+
+.filter__label_active,
+.filter__label:hover {
+ border-color: #727272;
 }
 
 .filter__label:not(:first-child) {
   margin-left: 15px;
+}
+
+.input-radio__label {
+  border: none;
+}
+
+.input-radio__label_active,
+.input-radio__label:hover {
+  color: #010101;
 }
 
 .filter__row_bottom {
@@ -3263,13 +3324,36 @@ a.ui-button:active,
   width: 370px;
 }
 
-.filter__radio_small {
-  width: 15px;
-  height: 15px;
+.input-radio__small {
+  position: relative;
+  width: 16px;
+  height: 16px;
   margin-right: 15px;
+  text-align: center;
+  border-radius: 50%;
+  border: 1px solid #000000;
 }
 
-.filter__label_active {
+.input-radio__small::after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background: #000000;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: opacity .3s ease-in-out;
+}
+
+.filter__radio_small:checked + .input-radio__small::after {
+  opacity: 1;
+}
+
+
+.input-radio__label_active {
   color: #010101;
 }
 
